// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContextMenuItemChildren when a checkmark icon renders the component with the checkmark 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ContextualMenuItemBase
    classNames={
      Object {
        "checkmarkIcon": "checkmarkIcon",
        "divider": "---",
        "icon": "icon",
        "item": "item",
        "label": "label",
        "linkContent": "linkContent",
        "linkContentMenu": "linkContentMenu",
        "root": "root",
        "secondaryText": "secondaryText",
        "splitContainer": "splitContainer",
        "splitMenu": "splitMenu",
        "splitPrimary": "splitPrimary",
        "subMenuIcon": "subMenuIcon",
      }
    }
    index={1}
    item={
      Object {
        "key": "123",
      }
    }
    onCheckmarkClick={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <StyledIconBase
          className="checkmarkIcon"
          iconName=""
          onClick={[Function]}
        />,
        null,
        null,
        null,
        null,
      ],
      "className": "linkContent",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "className": "checkmarkIcon",
          "iconName": "",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      null,
      null,
      null,
      null,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <StyledIconBase
            className="checkmarkIcon"
            iconName=""
            onClick={[Function]}
          />,
          null,
          null,
          null,
          null,
        ],
        "className": "linkContent",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "className": "checkmarkIcon",
            "iconName": "",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        null,
        null,
        null,
        null,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`ContextMenuItemChildren when it has a sub menu renders the menu icon 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ContextualMenuItemBase
    classNames={
      Object {
        "checkmarkIcon": "checkmarkIcon",
        "divider": "---",
        "icon": "icon",
        "item": "item",
        "label": "label",
        "linkContent": "linkContent",
        "linkContentMenu": "linkContentMenu",
        "root": "root",
        "secondaryText": "secondaryText",
        "splitContainer": "splitContainer",
        "splitMenu": "splitMenu",
        "splitPrimary": "splitPrimary",
        "subMenuIcon": "subMenuIcon",
      }
    }
    hasIcons={true}
    index={1}
    item={
      Object {
        "iconProps": Object {},
        "key": "123",
        "submenuIconProps": Object {},
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        null,
        <StyledIconBase
          className="icon"
        />,
        null,
        null,
        <StyledIconBase
          className="subMenuIcon"
          iconName="ChevronRight"
        />,
      ],
      "className": "linkContent",
    },
    "ref": null,
    "rendered": Array [
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "className": "icon",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      null,
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "className": "subMenuIcon",
          "iconName": "ChevronRight",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          null,
          <StyledIconBase
            className="icon"
          />,
          null,
          null,
          <StyledIconBase
            className="subMenuIcon"
            iconName="ChevronRight"
          />,
        ],
        "className": "linkContent",
      },
      "ref": null,
      "rendered": Array [
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "className": "icon",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        null,
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "className": "subMenuIcon",
            "iconName": "ChevronRight",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`ContextMenuItemChildren when it has icons when it doesnt have iconProps renders the icon with iconName 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ContextualMenuItemBase
    classNames={
      Object {
        "checkmarkIcon": "checkmarkIcon",
        "divider": "---",
        "icon": "icon",
        "item": "item",
        "label": "label",
        "linkContent": "linkContent",
        "linkContentMenu": "linkContentMenu",
        "root": "root",
        "secondaryText": "secondaryText",
        "splitContainer": "splitContainer",
        "splitMenu": "splitMenu",
        "splitPrimary": "splitPrimary",
        "subMenuIcon": "subMenuIcon",
      }
    }
    hasIcons={true}
    index={1}
    item={
      Object {
        "iconProps": Object {},
        "key": "123",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        null,
        <StyledIconBase
          className="icon"
        />,
        null,
        null,
        null,
      ],
      "className": "linkContent",
    },
    "ref": null,
    "rendered": Array [
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "className": "icon",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      null,
      null,
      null,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          null,
          <StyledIconBase
            className="icon"
          />,
          null,
          null,
          null,
        ],
        "className": "linkContent",
      },
      "ref": null,
      "rendered": Array [
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "className": "icon",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        null,
        null,
        null,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`ContextMenuItemChildren when it has icons when it has iconProps renders the icon 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ContextualMenuItemBase
    classNames={
      Object {
        "checkmarkIcon": "checkmarkIcon",
        "divider": "---",
        "icon": "icon",
        "item": "item",
        "label": "label",
        "linkContent": "linkContent",
        "linkContentMenu": "linkContentMenu",
        "root": "root",
        "secondaryText": "secondaryText",
        "splitContainer": "splitContainer",
        "splitMenu": "splitMenu",
        "splitPrimary": "splitPrimary",
        "subMenuIcon": "subMenuIcon",
      }
    }
    hasIcons={true}
    index={1}
    item={
      Object {
        "iconProps": Object {
          "iconName": "itemIcon",
        },
        "key": "123",
        "text": "menuItem",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        null,
        <StyledIconBase
          className="icon"
          iconName="itemIcon"
        />,
        <span
          className="label"
        >
          menuItem
        </span>,
        null,
        null,
      ],
      "className": "linkContent",
    },
    "ref": null,
    "rendered": Array [
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "className": "icon",
          "iconName": "itemIcon",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "menuItem",
          "className": "label",
        },
        "ref": null,
        "rendered": "menuItem",
        "type": "span",
      },
      null,
      null,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          null,
          <StyledIconBase
            className="icon"
            iconName="itemIcon"
          />,
          <span
            className="label"
          >
            menuItem
          </span>,
          null,
          null,
        ],
        "className": "linkContent",
      },
      "ref": null,
      "rendered": Array [
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "className": "icon",
            "iconName": "itemIcon",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "menuItem",
            "className": "label",
          },
          "ref": null,
          "rendered": "menuItem",
          "type": "span",
        },
        null,
        null,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
